--- a/package.json
+++ b/package.json
@@ -1,17 +1,46 @@
 {
-  "name": "mime-ui",
-  "version": "0.1.0",
-  "private": true,
-  "main": "./dist/components/index.js",
+  "name": "memui",
+  "version": "0.1.1",
+  "main": "./dist/index.js",
+  "keywords": [
+    "React Component",
+    "UI"
+  ],
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "npm run rm && npm run build-ts && npm run  build-css",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "rm": "rimraf ./dist",
+    "build-ts": "tsc -p tsconfig.build.json",
+    "build-css": "node-sass ./src/styles/index.scss ./dist/index.css",
+    "lint": "eslint --ext js,ts,tsx src --max-warnings 5",
+    "test:nowatch": "cross-env CI=true react-scripts test --passWithNoTests",
+    "prepublish": "npm run test:nowatch && npm run lint && npm run build"
+  }, 
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run test:nowatch && npm run lint"
+    }
+  },
   "dependencies": {
+    "@types/classnames": "^2.2.10",
+    "classnames": "^2.2.6"
+  },
+  "peerDependencies": {
+    "react": ">=16.9.0",
+    "react-dom": ">=16.9.0"
+  },
+  "devDependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "@types/classnames": "^2.2.10",
     "@types/jest": "^24.9.1",
     "@types/node": "^12.12.42",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
+    "cross-env": "^7.0.2",
+    "husky": "^4.2.5",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -20,15 +49,9 @@
     "sass-loader": "^8.0.2",
     "typescript": "^3.7.5"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "npm run rm && npm run build-ts && npm run  build-css",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "rm": "rimraf ./dist",
-    "build-ts": "tsc -p tsconfig.build.json",
-    "build-css": "node-sass ./src/styles/index.scss ./dist/index.css"
-  },
+  "files": [
+    "dist"
+  ],
   "eslintConfig": {
     "extends": "react-app"
   },
